# gibbs2

./: .gitignore  CMakeLists.txt  README  THANKS
doc/: RST2.tex  (+7 more)
src/: CMakeLists.txt  Makefile  Makefile.inc  debye.f90  dgam.f  eos.f90  evfunc.f90  fit.f90  gibbs2.f90  gnuplot_templates.f90  makemake.sh  param.f90  setvariables.f90  tools.f90  topcalc.f90  varbas.f90
src/minpack/: CMakeLists.txt  Makefile  README  disclaimer
src/pppack/: CMakeLists.txt  Makefile  cubspl.f  interv.f  ppvalu.f
src/slatec/: CMakeLists.txt  Makefile  README  SLATEC_install  SLATEC_tree  SLATEC_tree1  dp1vlu.f  dpcoef.f  dpolft.f
tests/: 01_simple.ing  02_fits.ing  03_tmodels.ing  04_eec.ing  05_elec.gnu  05_elec.ing  06_phases.ing  CMakeLists.txt
tests/001_simple/: 001_io.ing  CMakeLists.txt
tests/001_simple/ref/: 001_io.efit  001_io.eos  001_io.eos_static  001_io.outg  001_io_all_p.gnu  001_io_all_t.gnu  001_io_efit.aux  001_io_efit.gnu
tests/002_fits/: 001_fits.ing  CMakeLists.txt
tests/002_fits/ref/: 001_fits.efit  001_fits.eos  001_fits.eos_static  001_fits.outg  001_fits_all_t.gnu  001_fits_dH.aux  001_fits_dH.gnu  001_fits_efit.aux  001_fits_efit.gnu
tests/003_tmodels/: 001_tmodels.ing  002_externalfvib.ing  CMakeLists.txt
tests/003_tmodels/ref/: 001_tmodels.efit  001_tmodels.eos  001_tmodels.eos_static  001_tmodels.outg  001_tmodels_all_p.gnu  001_tmodels_dH.aux  001_tmodels_dH.gnu  001_tmodels_efit.aux  001_tmodels_efit.gnu  002_externalfvib.efit  002_externalfvib.eos  002_externalfvib.eos_static  002_externalfvib_all_p.gnu  002_externalfvib_efit.aux  002_externalfvib_efit.gnu
tests/004_eec/: 001_eec.ing  CMakeLists.txt
tests/004_eec/ref/: 001_eec.efit  001_eec.eos  001_eec.eos_static  001_eec.outg  001_eec_all_t.gnu  001_eec_dH.aux  001_eec_dH.gnu  001_eec_efit.aux  001_eec_efit.gnu
tests/005_elec/: 001_elec.ing  CMakeLists.txt
tests/005_elec/ref/: 001_elec.efit  001_elec.eos  001_elec.eos_static  001_elec.outg  001_elec_dH.aux  001_elec_dH.gnu  001_elec_efit.aux  001_elec_efit.gnu
tests/006_phases/: 001_phases.ing  CMakeLists.txt
tests/006_phases/ref/: 001_phases.dgtp  001_phases.efit  001_phases.eos  001_phases.eos_static  001_phases.outg  001_phases.ptrans  001_phases.tpstab  001_phases_all_p.gnu  001_phases_all_t.gnu  001_phases_dH.aux  001_phases_dH.gnu  001_phases_efit.aux  001_phases_efit.gnu  001_phases_ptrans.gnu
tests/dat/al_lda/: al.res
tests/dat/al_lda/001/: 001.phdos
tests/dat/al_lda/001_/: 001_.phdos
tests/dat/al_lda/002/: 002.phdos
tests/dat/al_lda/003/: 003.phdos
tests/dat/al_lda/004/: 004.phdos
tests/dat/al_lda/004_/: 004_.phdos
tests/dat/al_lda/005/: 005.phdos
tests/dat/al_lda/008/: 008.phdos
tests/dat/al_lda/010/: 010.phdos
tests/dat/al_lda/010_/: 010_.phdos
tests/dat/al_lda/011/: 011.phdos
tests/dat/al_lda/012_/: 012_.phdos
tests/dat/al_lda/014/: 014.phdos
tests/dat/al_lda/016/: 016.phdos
tests/dat/al_lda/018/: 018.phdos
tests/dat/al_lda/019/: 019.phdos
tests/dat/al_lda/020/: 020.phdos
tests/dat/al_lda/022/: 022.phdos
tests/dat/al_lda/025/: 025.phdos
tests/dat/al_lda/027/: 027.phdos
tests/dat/al_lda/028/: 028.phdos
tests/dat/al_lda/029/: 029.phdos
tests/dat/al_lda/030/: 030.phdos
tests/dat/al_lda/031/: 031.phdos
tests/dat/al_pbe/002_/: 002_.phdos
tests/dat/al_pbe/003/: 003.phdos
tests/dat/al_pbe/003_/: 003_.phdos
tests/dat/al_pbe/004/: 004.phdos
tests/dat/al_pbe/005/: 005.phdos
tests/dat/al_pbe/005_/: 005_.phdos
tests/dat/al_pbe/006_/: 006_.phdos
tests/dat/al_pbe/007_/: 007_.phdos
tests/dat/al_pbe/008_/: 008_.phdos
tests/dat/al_pbe/009/: 009.phdos
tests/dat/al_pbe/009_/: 009_.phdos
tests/dat/al_pbe/010/: 010.phdos
tests/dat/al_pbe/010_/: 010_.phdos
tests/dat/al_pbe/011/: 011.phdos
tests/dat/al_pbe/011_/: 011_.phdos
tests/dat/al_pbe/012_/: 012_.phdos
tests/dat/al_pbe/014/: 014.phdos
tests/dat/al_pbe/015/: 015.phdos
tests/dat/al_pbe/016/: 016.phdos
tests/dat/al_pbe/018/: 018.phdos
tests/dat/al_pbe/020/: 020.phdos
tests/dat/al_pbe/021/: 021.phdos
tests/dat/al_pbe/022/: 022.phdos
tests/dat/al_pbe/024/: 024.phdos
tests/dat/al_pbe/026/: 026.phdos
tests/dat/al_pbe/028/: 028.phdos
tests/dat/c_lda/005/: 005.phdos
tests/dat/c_lda/008/: 008.phdos
tests/dat/c_lda/009/: 009.phdos
tests/dat/c_lda/012/: 012.phdos
tests/dat/c_lda/013/: 013.phdos
tests/dat/c_lda/015/: 015.phdos
tests/dat/c_lda/018/: 018.phdos
tests/dat/c_lda/020/: 020.phdos
tests/dat/c_lda/022/: 022.phdos
tests/dat/c_lda/025/: 025.phdos
tests/dat/c_lda/026/: 026.phdos
tests/dat/c_lda/029/: 029.phdos
tests/dat/c_lda/030/: 030.phdos
tests/dat/c_lda/031/: 031.phdos
tests/dat/c_pbe/002/: 002.phdos
tests/dat/c_pbe/004/: 004.phdos
tests/dat/c_pbe/005/: 005.phdos
tests/dat/c_pbe/007/: 007.phdos
tests/dat/c_pbe/010/: 010.phdos
tests/dat/c_pbe/012/: 012.phdos
tests/dat/c_pbe/013/: 013.phdos
tests/dat/c_pbe/014/: 014.phdos
tests/dat/c_pbe/015/: 015.phdos
tests/dat/c_pbe/017/: 017.phdos
tests/dat/c_pbe/021/: 021.phdos
tests/dat/c_pbe/025/: 025.phdos
tests/dat/c_pbe/026/: 026.phdos
tests/dat/c_pbe/030/: 030.phdos
tests/dat/c_pbe/031/: 031.phdos
tests/dat/externalfvib_mgo/: F_0.txt  F_300.txt  list.gvt  mgo.res
tests/dat/mgo_lda/: mgo.res
tests/dat/mgo_lda/001/: 001.phdos
tests/dat/mgo_lda/002/: 002.phdos
tests/dat/mgo_lda/002_/: 002_.phdos
tests/dat/mgo_lda/005_/: 005_.phdos
tests/dat/mgo_lda/006_/: 006_.phdos
tests/dat/mgo_lda/007/: 007.phdos
tests/dat/mgo_lda/008/: 008.phdos
tests/dat/mgo_lda/008_/: 008_.phdos
tests/dat/mgo_lda/010_/: 010_.phdos
tests/dat/mgo_lda/012/: 012.phdos
tests/dat/mgo_lda/013/: 013.phdos
tests/dat/mgo_lda/013_/: 013_.phdos
tests/dat/mgo_lda/014/: 014.phdos
tests/dat/mgo_lda/015_/: 015_.phdos
tests/dat/mgo_lda/016_/: 016_.phdos
tests/dat/mgo_lda/017_/: 017_.phdos
tests/dat/mgo_lda/018_/: 018_.phdos
tests/dat/mgo_lda/020_/: 020_.phdos
tests/dat/mgo_lda/021_/: 021_.phdos
tests/dat/mgo_lda/022/: 022.phdos
tests/dat/mgo_lda/024/: 024.phdos
tests/dat/mgob2_pbe/: mgob2.res
(+777 files in other folders)
